{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 0,
  "lineage": "d2452697-3f54-56ea-b17b-3ace6ccae30b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_00ba9e9efaf200476",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:internet-gateway/igw-00ba9e9efaf200476",
            "id": "igw-00ba9e9efaf200476",
            "owner_id": "459018586415",
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_lambda_function.lambda_api",
            "aws_vpc.vpc_0a3f76748f449c35a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_0639e2d57d80e35eb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:route-table/rtb-0639e2d57d80e35eb",
            "id": "rtb-0639e2d57d80e35eb",
            "owner_id": "459018586415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ba9e9efaf200476",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lambda_function.lambda_api",
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_internet_gateway.igw_00ba9e9efaf200476"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_0ffad359b81810e7c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:security-group/sg-0ffad359b81810e7c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ffad359b81810e7c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "459018586415",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0220733da80608b88",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-0220733da80608b88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0220733da80608b88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_lambda_function.lambda_api",
            "aws_vpc.vpc_0a3f76748f449c35a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_08420e5d667ea3af5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-08420e5d667ea3af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08420e5d667ea3af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_lambda_function.lambda_api",
            "aws_vpc.vpc_0a3f76748f449c35a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_097640716d19251da",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-097640716d19251da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097640716d19251da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0c57ee31848edbeb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-0c57ee31848edbeb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c57ee31848edbeb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0d6fb7fc1c74034f8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-0d6fb7fc1c74034f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6fb7fc1c74034f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0df1b2a23cd34288d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:subnet/subnet-0df1b2a23cd34288d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1b2a23cd34288d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459018586415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-0a3f76748f449c35a"
          },
          "dependencies": [
            "aws_vpc.vpc_0a3f76748f449c35a",
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_0a3f76748f449c35a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459018586415:vpc/vpc-0a3f76748f449c35a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00b374b7ced1493f0",
            "default_route_table_id": "rtb-0639e2d57d80e35eb",
            "default_security_group_id": "sg-0ffad359b81810e7c",
            "dhcp_options_id": "dopt-006f9b164c2b1b0f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a3f76748f449c35a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0639e2d57d80e35eb",
            "owner_id": "459018586415"
          },
          "dependencies": [
            "aws_lambda_function.lambda_api"
          ]
        }
      ]
    }
  ]
}